# GameLibSplit

./: .gitignore  BuildLinux.sh  BuildWin.bat  CMakeLists.txt  CMakeUserPresets.json  CleanLinux.sh  CleanWin.bat  CleanWinDeep.bat  GameLinux.sh  GameWin.bat  GetSFML.txt  custom.css
CoreLib/: CMakeLists.txt  readme.txt
CoreLib/include/: Application.h  Category.h  Command.h  CommandQueue.h  Config.h  DefaultState.h  Entity.h  ParallelTask.h  PlayerBase.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdent.h  SceneNode.h  SpriteNode.h  State.h  StateIdent.h  StateStack.h  Utility.h
CoreLib/src/: Application.cpp  CommandQueue.cpp  DefaultState.cpp  Entity.cpp  ParallelTask.cpp  PlayerBase.cpp  SceneNode.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp  Utility.cpp
DanGame/: CMakeLists.txt
DanGame/src/: Core.h  Game.cpp
include/: Aircraft.h  GameApp.h  GameState.h  LoadingState.h  MenuState.h  PauseState.h  Player  TitleState.h  World.h
src/: Aircraft.cpp  CMakeLists.txt  GameApp.cpp  GameState  LoadingState.cpp  MenuState  PauseState.cpp  Player  TitleState.cpp  World.cpp  main.cpp
